--- a/index.html
+++ b/index.html
@@ -10,5 +10,19 @@
 <body>
     <p>funny text (i nate higers)</p>
     <button onclick="heilo()">heilo</button>
+
+    <form action="">
+        <input 
+            type="text" 
+            name="username" 
+            placeholder="Bank account detail pls">
+        <input 
+            type="password" 
+            name="username" 
+            placeholder="Sensitive acc detail">
+        <input 
+            type="submit" 
+            value="submit">
+    </form>
 </body>
 </html>
